--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -1,8 +1,8 @@
 @import '../variables.scss';
 
 .asset-detail-modal-body {
-  background-color: #fff;
-  border: 5px solid $primary-color;
+  background-color: var(--bg-header);
+  border: 5px solid var(--bg-canvas-default);
   display: flex;
   font-family: $default-font;
   gap: 1rem;
@@ -10,14 +10,15 @@
   justify-content: center;
   .asset-detail-modal-info {
     max-width: 400px;
-    border: 2px solid rgba(209, 213, 219, 1);
+    border: 2px solid var(--border-default);
     border-radius: 10px;
+    background-color: var(--bg-canvas-default);
     padding: 0.5rem;
     box-shadow: rgb(4 17 29 / 25%) 0px 0px 3px 0px;
     .asset-detail-modal-info-header {
       padding: 0.5rem;
       padding-top: 0;
-      color: $primary-color;
+      color: var(--color-primary);
       font-weight: 600;
       font-size: 18px;
     }
@@ -39,7 +40,7 @@
     }
 
     p {
-      color: $primary-color;
+      color: var(--color-primary);
       padding: 0.5rem;
       margin: 0;
       font-weight: 600;
@@ -49,7 +50,7 @@
     a {
       text-decoration: none;
       .asset-modal-opensea {
-        border: 1px solid #aaaaaa;
+        border: 1px solid var(--border-default);
         display: flex;
         justify-content: center;
         border-radius: 5px;
@@ -60,7 +61,7 @@
         }
 
         p {
-          color: $secondary-color;
+          color: var(--color-secondary);
 
           strong {
             font-weight: 600;
@@ -79,7 +80,7 @@
     .rarity-score {
       width: 100%;
       border-radius: 5px;
-      background-color: $primary-color;
+      background-color: var(--color-primary);
       padding: 0.3rem;
       padding-bottom: 0.6rem;
       margin-bottom: 10px;
@@ -90,7 +91,7 @@
       }
 
       .rarity-score-content {
-        background-color: #fff;
+        background-color: var(--bg-canvas-default);
         border-radius: 5px;
         text-align: center;
         padding: 0.3rem 0;
@@ -104,6 +105,10 @@
       justify-content: center;
       margin-bottom: 10px;
       gap: 0.5rem;
+
+      .light-primary-btn {
+        background-color: var(--bg-app);
+      }
       button {
         padding: 0.2rem;
       }
@@ -118,7 +123,7 @@
         gap: 0.5rem;
         li {
           cursor: pointer;
-          color: $primary-color;
+          color: var(--color-primary);
           margin: 0;
           padding: 0;
           font-size: small;
@@ -135,7 +140,7 @@
 
             small {
               font-size: medium;
-              color: $primary-color;
+              color: var(--color-primary);
             }
 
             .asset-detail-filter-header-n {
@@ -149,7 +154,7 @@
             }
           }
           .asset-detail-filter-attribute {
-            background-color: #9ca3af;
+            background-color: var(--border-default);
             cursor: pointer;
             border-radius: 5px;
             display: flex;
@@ -167,7 +172,7 @@
 
             .asset-detail-filter-a {
               width: 50px;
-              background-color: #fff;
+              background-color: var(--bg-header);
               border-radius: 5px;
               display: flex;
               justify-content: end;
@@ -176,7 +181,7 @@
               p {
                 margin: 0;
 
-                color: #9ca3af;
+                color: var(--color-secondary);
               }
             }
           }
