--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -6,7 +6,8 @@ a {
   .collection-asset-card {
     width: 300px;
     height: 300px;
-    border: 1px solid #f0f0f1;
+    border: 1px solid var(--border-default);
+    background-color: var(--bg-canvas-default);
     padding: 0.8rem;
     border-radius: 10px;
     cursor: pointer;
@@ -15,10 +16,10 @@ a {
       justify-content: space-between;
 
       p {
-        color: $primary-color;
+        color: var(--color-primary);
 
         &:last-child {
-          color: $secondary-color;
+          color: var(--color-secondary);
           font-size: 15px;
         }
       }
@@ -49,15 +50,15 @@ a {
 
       p {
         &:first-child {
-          color: $primary-color;
+          color: var(--color-primary);
         }
 
-        color: $secondary-color;
+        color: var(--color-secondary);
         margin: 0;
         margin-top: 10px;
 
         svg {
-          color: $primary-color;
+          color: var(--color-primary);
         }
       }
     }
