--- a/src/styles/components/_collection-result-card.scss
+++ b/src/styles/components/_collection-result-card.scss
@@ -5,11 +5,11 @@
   margin: 2.1rem 0;
   font-family: $default-font;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #e6e3e3;
+  border-bottom: 1px solid var(--border-default);
 
   header {
     padding: 1rem 0;
-    color: $primary-color;
+    color: var(--color-primary);
     font-size: 30px;
   }
 
@@ -40,14 +40,14 @@
             p {
               font-weight: 600;
               font-size: 20px;
-              color: #686767;
+              color: var(--color-secondary);
               margin: 0;
             }
             small {
-              color: $secondary-color;
+              color: var(--color-secondary);
 
               strong {
-                color: $primary-color;
+                color: var(--color-primary);
                 font-weight: 400;
               }
             }
@@ -60,10 +60,10 @@
           flex-wrap: wrap;
           line-height: 15px;
           p {
-            color: $secondary-color;
+            color: var(--color-secondary);
             margin: 0.3rem 0.5rem;
             strong {
-              color: $primary-color;
+              color: var(--color-primary);
               font-weight: 400;
             }
           }
@@ -82,6 +82,7 @@
         p {
           text-align: center;
           margin: 0;
+          color: var(--color-secondary);
         }
 
         .assets-container {
