--- a/src/styles/components/_collection-stats.scss
+++ b/src/styles/components/_collection-stats.scss
@@ -12,10 +12,10 @@
     small {
       margin: 0;
       display: block;
-      color: $primary-color;
+      color: var(--color-primary);
 
       &:last-child {
-        color: $secondary-color;
+        color: var(--color-secondary);
       }
     }
   }
@@ -24,7 +24,7 @@
 .collection-stats {
   width: 65%;
   display: flex;
-  border: 1px solid #e6e6e6;
+  border: 1px solid var(--border-default);
   border-radius: 5px;
   justify-content: center;
 
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    border-left: 1px solid #e6e6e6;
+    border-left: 1px solid var(--border-default);
     padding: 0.3rem 0;
 
     &:hover {
@@ -55,10 +55,10 @@
 
     p {
       margin: 0;
-      color: $primary-color;
+      color: var(--color-primary);
     }
     small {
-      color: $secondary-color;
+      color: var(--color-secondary);
     }
   }
 }
