--- a/src/styles/components/_dark-primary-btn.scss
+++ b/src/styles/components/_dark-primary-btn.scss
@@ -5,7 +5,8 @@
   border-radius: 0.25rem;
   color: #fff;
   font-weight: bold;
-  background-color: $primary-color;
+  background-color: var(--color-primary);
+  border-color: var(--border-default);
   border-width: 0.06rem;
   border-style: solid;
   cursor: pointer;
