--- a/src/styles/components/_drop-down-assets.scss
+++ b/src/styles/components/_drop-down-assets.scss
@@ -1,22 +1,20 @@
-@import '../variables.scss';
-
 .drop-down-assets {
   width: 70%;
   margin: 0 1rem;
 
   header {
-    color: $primary-color;
+    color: var(--color-primary);
     font-weight: 600;
     margin: 0.6rem 0;
   }
 
   .asset {
-    border-bottom: 1px solid #c0bfbf;
+    border-bottom: 1px solid var(--border-default);
     padding-bottom: 0.5rem;
     margin-bottom: 1rem;
     min-height: 136px;
     &:hover {
-      border-bottom: 1px solid $primary-color;
+      border-bottom: 1px solid var(--color-primary);
     }
 
     .asset-info-container {
@@ -31,13 +29,13 @@
         align-items: center;
         line-height: 17px;
         p {
-          color: $secondary-color;
+          color: var(--color-secondary);
           font-weight: 500;
           margin: 0;
         }
 
         small {
-          color: $primary-color;
+          color: var(--color-primary);
         }
       }
     }
@@ -50,17 +48,17 @@
         margin: 0.3rem;
         strong {
           font-weight: 400;
-          color: $primary-color;
+          color: var(--color-primary);
         }
       }
     }
   }
 
   a {
-    color: #aaaaaa;
+    color: var(--color-secondary);
 
     &:hover {
-      color: $secondary-color-hover;
+      color: var(--color-secondary-hover);
     }
   }
 }
