--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,3 @@
-@import '../variables.scss';
-
 .header-container {
   position: sticky;
   top: 0;
@@ -8,17 +6,15 @@
 }
 
 .header {
-  background-color: $bg-primary;
   width: 100%;
   height: 70px;
-  background-color: #fff;
+  background-color: var(--bg-header);
   display: flex;
   align-items: center;
-  color: $secondary-color;
+  color: var(--color-secondary);
   padding: 0.5rem 2rem;
   padding-left: 0rem;
   font-family: 'Raleway', sans-serif;
-  border-bottom: 1px solid $muted;
   justify-content: space-between;
 
   .hot-bar-header {
@@ -55,10 +51,9 @@
         position: absolute;
         width: 100%;
         top: 53px;
-        background-color: #fff;
+        background-color: var(--bg-search-input);
         overflow-y: auto;
         box-shadow: rgb(0 0 0 / 16%) 0px 4px 16px;
-        background-color: rgb(255, 255, 255);
         z-index: 9999;
 
         .loader-container {
@@ -74,12 +69,12 @@
           padding: 0;
 
           li {
-            border-bottom: 1px solid $muted;
+            border-bottom: 1px solid var(--border-default);
             padding: 8px;
           }
 
           a {
-            color: #000;
+            color: var(--color-secondary);
             li {
               .result-img {
                 width: 30px;
@@ -94,7 +89,7 @@
 
               .badge {
                 margin-left: 10px;
-                background-color: $primary-color !important;
+                background-color: var(--color-primary) !important;
               }
 
               &:hover {
@@ -108,7 +103,8 @@
         a {
           .drop-down-footer {
             padding: 8px;
-            color: $secondary-color;
+            color: var(--color-secondary);
+            background-color: var(--bg-header);
             text-align: center;
           }
         }
@@ -199,7 +195,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
     a {
       margin: auto 0.7rem;
-      color: $secondary-color;
+      color: var(--color-secondary);
       text-decoration: none;
       font-weight: 500;
       position: relative;
@@ -212,7 +208,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
         display: inline-block;
         height: 2.06em;
         width: 100%;
-        border-bottom: 2px solid $primary-color;
+        border-bottom: 2px solid var(--color-primary);
         margin-top: 10px;
         opacity: 0;
         -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -234,9 +230,18 @@ Note: Beware of modifying this element as it can break the animations - you shou
       display: flex;
       align-items: center;
       .header-icon {
-        color: $primary-color;
+        color: var(--color-primary);
         margin: 0 4px;
       }
+      span {
+        color: var(--color-secondary);
+        font-size: 10px;
+      }
+    }
+
+    .theme-toggle {
+      margin-left: 10px;
+      cursor: pointer;
     }
   }
 }
@@ -317,7 +322,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
   a {
     margin: auto 0.7rem;
-    color: $secondary-color;
+    color: var(--color-secondary);
     text-decoration: none;
     font-weight: 500;
     position: relative;
@@ -330,7 +335,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
       display: inline-block;
       height: 2.06em;
       width: 100%;
-      border-bottom: 2px solid $primary-color;
+      border-bottom: 2px solid var(--color-primary);
       margin-top: 10px;
       opacity: 0;
       -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -352,7 +357,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
     display: flex;
     align-items: center;
     .header-icon {
-      color: $primary-color;
+      color: var(--color-primary);
       margin: 0 4px;
     }
   }
