--- a/src/styles/components/_nft-search-bar.scss
+++ b/src/styles/components/_nft-search-bar.scss
@@ -1,5 +1,3 @@
-@import '../variables.scss';
-
 .search-bar-wrapper {
   width: 30%;
   display: flex;
@@ -27,7 +25,7 @@
     position: absolute;
     border-radius: 4px;
     box-shadow: rgb(0 0 0 / 16%) 0px 4px 16px;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--bg-search-input);
     display: flex;
     flex-direction: column;
     padding-bottom: 0;
@@ -65,10 +63,10 @@
 
     .drop-down-footer {
       text-align: center;
-      background-color: #f6f6f6;
-      color: $primary-color;
+      background-color: var(--bg-header);
+      color: var(--color-secondary);
       padding: 0.5rem 0;
-      border: 1px solid #aaaaaa;
+      border: 1px solid var(--border-default);
 
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px;
