--- a/src/styles/components/_paginator.scss
+++ b/src/styles/components/_paginator.scss
@@ -13,13 +13,14 @@
   li {
     margin: 0 0.5rem;
     font-size: 20px;
+    color: var(--color-secondary);
     &:hover {
-      color: rgb(51, 51, 51);
+      color: var(--color-secondary-hover);
     }
   }
 
   .paginator-active-page {
-    color: $primary-color;
+    color: var(--color-primary);
 
     &:hover {
     }
