--- a/src/styles/components/_search-input.scss
+++ b/src/styles/components/_search-input.scss
@@ -2,11 +2,11 @@
 
 .search-input {
   color: $secondary-color;
-  background-color: #fff;
+  background-color: var(--bg-search-input);
   width: 100%;
   padding: 0.8rem;
   border-radius: 1.4rem;
-  border: 1px solid #c7c7c7;
+  border: 1px solid var(--border-default);
   display: flex;
   align-items: center;
   cursor: text;
@@ -20,13 +20,14 @@
     display: flex;
     align-items: center;
     svg {
-      color: $secondary-color;
+      color: var(--color-secondary);
       margin-right: 5px;
     }
     input {
       width: 100%;
-      color: $secondary-color;
+      color: var(--color-secondary);
       border: none;
+      background: none;
 
       &::placeholder {
         color: #aaaaaa;
