--- a/src/styles/components/_top-collections-card.scss
+++ b/src/styles/components/_top-collections-card.scss
@@ -1,9 +1,8 @@
-@import '../variables.scss';
-
 .top-collections-card {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccced3;
+  background-color: var(--bg-canvas-default);
+  border: 1px solid var(--border-default);
   border-radius: 0.4rem;
   min-width: 300px;
   width: 310px;
@@ -14,7 +13,7 @@
 
   .card-title {
     font-weight: 800;
-    color: $primary-color;
+    color: var(--color-primary);
     padding: 0.8rem 1rem;
   }
 
@@ -22,7 +21,7 @@
     width: 2.6rem;
     font-size: 1.5rem;
     font-weight: 600;
-    color: #9ca3af;
+    color: var(--color-secondary);
     margin: 0;
   }
 
@@ -34,7 +33,7 @@
 
     cursor: pointer;
     &:hover {
-      background-color: #e6e6e6;
+      background-color: var(--canvas-default-hover);
     }
 
     .collection-pic {
@@ -50,7 +49,7 @@
 
       p {
         font-weight: 600;
-        color: $primary-color;
+        color: var(--color-primary);
         font-size: 1rem;
         margin: 0;
       }
