--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -5,7 +5,7 @@
   padding: 2rem;
   .full-search-header {
     display: flex;
-    background-color: #fff;
+    background-color: var(--bg-app);
     align-items: flex-end;
     position: sticky;
     top: 70px;
@@ -43,12 +43,12 @@
       list-style: none;
 
       .active {
-        border-bottom: 1px solid $primary-color;
+        border-bottom: 1px solid var(--color-primary);
       }
 
       li {
         cursor: pointer;
-        color: $primary-color;
+        color: var(--color-primary);
         margin-right: 2.5rem;
         border-bottom: 1px solid transparent;
         white-space: nowrap;
@@ -60,7 +60,7 @@
           display: inline-block;
           height: 0.9rem;
           width: 100%;
-          border-bottom: 1px solid $primary-color;
+          border-bottom: 1px solid var(--color-primary);
           margin-top: 10px;
           opacity: 0;
           -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -108,7 +108,7 @@
       color: #a0a0a0;
       margin-right: 1rem;
       &:hover {
-        color: $primary-color;
+        color: var(--color-primary);
       }
       p {
         font-weight: 500;
@@ -135,12 +135,12 @@
 
           li {
             cursor: pointer;
-            color: $secondary-color;
+            color: var(--color-secondary);
             font-size: 15px;
             margin: 0.2rem 0;
 
             &:hover {
-              color: $primary-color;
+              color: var(--color-primary);
             }
           }
         }
