--- a/src/styles/pages/collection/_collection-header.scss
+++ b/src/styles/pages/collection/_collection-header.scss
@@ -42,6 +42,24 @@
 
             .img-loader {
               margin-right: 15px;
+
+              background-color: var(--border-default);
+              background-image: linear-gradient(
+                90deg,
+                var(--bg-header),
+                var(--bg-header),
+                var(--bg-header)
+              );
+            }
+
+            .loader-name {
+              background-color: var(--border-default);
+              background-image: linear-gradient(
+                90deg,
+                var(--bg-header),
+                var(--bg-header),
+                var(--bg-header)
+              );
             }
 
             img {
@@ -53,16 +71,21 @@
             }
 
             .collection-personal-stats {
+              .loader-personal-stats {
+                background-color: var(--border-default);
+                background-image: linear-gradient(
+                  90deg,
+                  var(--bg-header),
+                  var(--bg-header),
+                  var(--bg-header)
+                );
+              }
               display: flex;
               flex-direction: column;
               small {
                 margin: 0;
-                color: $primary-color;
+                color: var(--color-primary);
                 font-size: 1rem;
-
-                strong {
-                  color: $success-color;
-                }
 
                 &:last-child {
                   text-align: start;
@@ -72,7 +95,7 @@
 
             p {
               margin: 0;
-              color: $secondary-color;
+              color: var(--color-secondary);
               font-size: 1.5rem;
             }
           }
@@ -82,6 +105,11 @@
           margin: 0.6rem 0;
           display: flex;
           flex-direction: column;
+
+          .desc-loading {
+            background-color: var(--border-default);
+            background-image: linear-gradient(90deg, var(--bg-header));
+          }
 
           .xs {
             width: 30%;
@@ -101,10 +129,10 @@
 
           p {
             width: 100%;
-            color: $secondary-color;
+            color: var(--color-secondary);
             margin: 5px 0;
             &:first-child {
-              color: $primary-color;
+              color: var(--color-primary);
               margin: 0;
             }
           }
@@ -123,12 +151,12 @@
               text-decoration: none;
 
               svg {
-                color: $primary-color;
+                color: var(--color-primary);
                 margin-right: 0.5rem;
               }
 
               small {
-                color: $secondary-color;
+                color: var(--color-secondary);
               }
             }
           }
