--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,4 @@
 @use './pages/collection/index.scss' as collectionDetails;
 @use './pages/Search/index.scss' as search;
 @use './pages/getListed/Index.scss' as getListed;
+@use './pages/Error404/Index.scss' as Error404;
