--- a/src/styles/components/_nft-search-bar.scss
+++ b/src/styles/components/_nft-search-bar.scss
@@ -42,6 +42,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      color: var(--color-secondary);
     }
 
     .drop-down-results {
