--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -154,6 +154,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      color: var(--color-secondary);
     }
   }
 
@@ -170,10 +171,12 @@
       .no-items-found {
         width: 500px;
         height: 200px;
-        border: 1px solid #adadad;
+        background-color: var(--bg-header);
+        border: 1px solid var(--border-default);
         border-radius: 5px;
         box-shadow: rgb(0 0 0 / 16%) 0px 4px 16px;
         display: flex;
+        color: var(--bm-icon-color);
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -281,9 +284,9 @@
         .no-items-found {
           width: 100%;
           height: 200px;
-          border: 1px solid #adadad;
           border-radius: 5px;
           box-shadow: rgb(0 0 0 / 16%) 0px 4px 16px;
+          background-color: var(--bg-header);
           display: flex;
           flex-direction: column;
           align-items: center;
