--- a/src/styles/pages/collection/_collection-header.scss
+++ b/src/styles/pages/collection/_collection-header.scss
@@ -63,7 +63,7 @@
             }
 
             img {
-              width: auto;
+              width: 80px;
               height: 80px;
               border-radius: 50%;
               margin-right: 15px;
