WG-105 reduce space between items in hotbar

--- a/src/styles/components/_hot-collections-bar.scss
+++ b/src/styles/components/_hot-collections-bar.scss
@@ -4,7 +4,7 @@
   display: flex;
   background-color: var(--bg-header);
   font-family: $default-font;
-  overflow-x: auto;
+  overflow-x: hidden;
 
   .hot-collections {
     display: flex;
