--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -17,6 +17,7 @@ a {
 
       p {
         color: var(--color-primary);
+        margin-bottom: 0.5rem;
 
         &:last-child {
           color: var(--color-secondary);
@@ -28,15 +29,15 @@ a {
     .asset-card-image {
       width: 100%;
       height: 100%;
-      max-height: 200px;
+      max-height: 210px;
       overflow: hidden;
       border-radius: 5px;
 
-      img {
+      .img {
         object-fit: cover;
         width: 100%;
         height: 100%;
-        min-height: 234.63px;
+        // min-height: 234.63px;
       }
     }
 
@@ -47,7 +48,8 @@ a {
 
     .asset-card-info {
       text-align: center;
-
+      font-size: 15px;
+      width: 100%;
       p {
         &:first-child {
           color: var(--color-primary);
