WG-118 exact match card asset attribute

--- a/src/styles/components/_drop-down-collections.scss
+++ b/src/styles/components/_drop-down-collections.scss
@@ -82,8 +82,8 @@
         gap: 0.3rem;
 
         img {
-          width: 55px;
-          height: auto;
+          width: auto;
+          height: 80px;
         }
       }
     }
