--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @use './index.scss';
+@use './admin.scss';
 @use './components/index.scss' as components;
 @use './pages/home/index.scss' as home;
 @use './pages/collection/index.scss' as collectionDetails;
