WG-103 Trim in everywhere

--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -2,7 +2,7 @@
 
 .asset-detail-modal-body {
   background-color: var(--bg-header);
-  border: 5px solid var(--bg-canvas-default);
+  border: 5px solid var(--border-asset-detail);
   display: flex;
   font-family: $default-font;
   gap: 1rem;
