--- a/src/styles/pages/collection/_collection-header.scss
+++ b/src/styles/pages/collection/_collection-header.scss
@@ -62,7 +62,7 @@
               );
             }
 
-            img {
+            .collection-img {
               width: 80px;
               height: 80px;
               border-radius: 50%;
