--- a/src/styles/pages/home/_nft-search-section.scss
+++ b/src/styles/pages/home/_nft-search-section.scss
@@ -11,7 +11,7 @@
   font-family: $default-font;
 
   .search-section-logo {
-    width: auto;
+    width: 323px;
     height: 100px;
     margin-bottom: 1.5rem;
     img {
