WG-46 setting asset detail green fields with trait score

--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -147,7 +147,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-
+            width: 100%;
             small {
               font-size: medium;
               color: var(--color-primary);
