--- a/src/styles/components/_collection-result-card.scss
+++ b/src/styles/components/_collection-result-card.scss
@@ -42,6 +42,14 @@
               font-size: 20px;
               color: var(--color-secondary);
               margin: 0;
+              display: flex;
+              align-items: center;
+              span {
+                margin-left: 0.5rem;
+                background-color: var(--color-primary);
+                padding: 0.2rem 0.4rem;
+                font-size: small;
+              }
             }
             small {
               color: var(--color-secondary);
