--- a/src/styles/components/_drop-down-collections.scss
+++ b/src/styles/components/_drop-down-collections.scss
@@ -31,6 +31,12 @@
           color: var(--color-secondary);
           margin: 0;
           font-weight: 500;
+          span {
+            margin-left: 0.5rem;
+            background-color: var(--color-primary);
+            padding: 0.2rem 0.4rem;
+            font-size: small;
+          }
         }
         .collection-img {
           width: 40px;
