--- a/src/styles/components/_top-collections-card.scss
+++ b/src/styles/components/_top-collections-card.scss
@@ -6,6 +6,7 @@
   border-radius: 0.4rem;
   min-width: 300px;
   width: 310px;
+  min-height: 592px;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
