--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -18,7 +18,11 @@
   justify-content: space-between;
 
   .hot-bar-header {
+    display: flex;
+    align-items: center;
     overflow: auto;
+    overflow-y: hidden;
+    height: 100%;
   }
 
   .left-menu {
