--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -436,6 +436,7 @@
             width: 100%;
             margin: 1rem 0;
             display: flex;
+            flex-direction: column;
             align-items: center;
           }
         }
