--- a/src/styles/components/_asset-result-card.scss
+++ b/src/styles/components/_asset-result-card.scss
@@ -53,6 +53,8 @@
 
             small {
               color: var(--color-primary);
+              width: 100%;
+              font-size: 12px;
             }
           }
         }
