--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -4,8 +4,8 @@ a {
   text-decoration: none;
 
   .collection-asset-card {
-    width: 300px;
-    height: 300px;
+    width: 340px;
+    height: 340px;
     border: 1px solid var(--border-default);
     background-color: var(--bg-canvas-default);
     padding: 0.8rem;
@@ -25,7 +25,7 @@ a {
     .asset-card-image {
       width: 100%;
       height: 100%;
-      max-height: 210px;
+      max-height: 230px;
       overflow: hidden;
       border-radius: 5px;
       display: flex;
@@ -50,8 +50,7 @@ a {
       font-size: 15px;
       width: 100%;
       margin-top: 0.2rem;
-      align-items: center;
-
+      justify-content: space-between;
       small {
         color: var(--muted);
 
@@ -74,6 +73,59 @@ a {
 
         svg {
           color: var(--color-primary);
+        }
+      }
+
+      .token-c {
+        position: relative;
+
+        .token-symbol {
+          position: absolute;
+          top: -15px;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background-color: var(--bg-header);
+          padding: 0.3rem;
+          border-radius: 10px;
+          border: 1px solid var(--border-default);
+        }
+      }
+
+      .token {
+      }
+
+      .token-red {
+        path {
+          fill: rgb(162, 78, 78);
+        }
+      }
+      .token-secondary {
+        path {
+          fill: var(--color-secondary);
+        }
+      }
+
+      .asset-price {
+        text-align: end;
+        display: flex;
+        flex-direction: column;
+        p {
+          margin: 0;
+          font-size: 13px;
+          color: var(--muted);
+        }
+
+        span {
+          display: flex;
+          justify-content: end;
+          gap: 0.2rem;
+          align-items: center;
+          width: 100%;
+          small {
+            &:last-child {
+              color: var(--color-secondary);
+            }
+          }
         }
       }
     }
